<resources>
    <string name="Categories">Categories</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="access_applies_to_all">Access (Applies to all</string>
    <string name="access_applies_to_all_clinics">Access (Applies to all clinics):</string>
    <string name="access_applies_to_selected">Access (Applies to selected</string>
    <string name="access_applies_to_selected_clinics">Access (Applies to selected clinics):</string>
    <string name="account_delete_message"><b>1. Initiating the Deletion Process:</b>"
Users can request the deletion of their accounts through our dedicated account settings page. 

"<b>2. Permanent Deletion:</b>"
If users choose to proceed with the account deletion, their accounts will be permanently deleted from our system. All personal information, account data, and associated records will be irreversibly removed. 

"<b>3. Comprehensive Removal:</b>"
The account deletion process is designed to be thorough. All clinics, package purchases, and associated data will be wiped clean from our servers. 

"<b>4. Data Privacy Assurance:</b>"
We prioritize the privacy and security of our users. Rest assured, once the account deletion is complete, your information will not be retained or accessible. 

"<b>5. Customer Support:</b>"
Our customer support team is available to assist users throughout the process, addressing any concerns and providing guidance on alternatives. 

"<b>6. Feedback and Improvement:</b>"
We value user feedback. If you have suggestions for improving our account deletion process or any other aspect of our service, please let us know."</string>
    <string name="account_level">Account Level Preferences</string>
    <string name="accounts">Accounts</string>
    <string name="action_day_view">Day View</string>
    <string name="action_goto">GO TO</string>
    <string name="action_month_view">List View</string>
    <string name="action_settings">Logout</string>
    <string name="action_sign_in">Create</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_three_day_view">3-Day View</string>
    <string name="action_today">Today</string>
    <string name="action_week_view">Week View</string>
    <string name="add">Add</string>
    <string name="add_batch_numbering">Add Batch Numbering</string>
    <string name="add_component"><u>Add Component</u></string>
    <string name="add_more_medicine"><u><b>Add Medicine</b></u></string>
    <string name="add_new"><b>Add New</b></string>
    <string name="add_ntreatment">Add Treatment</string>
    <string name="add_patient">Add Patient</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_payment2"><u><b>Add Payment</b></u></string>
    <string name="add_prescription">Add Prescription</string>
    <string name="add_treatment_done"><u><b>Add Treatment Done</b></u></string>
    <string name="add_treatment_plan"><u><b>Add Treatment Plan</b></u></string>
    <string name="add_visit">Add Visit</string>
    <string name="additional_charges">Additional Charges</string>
    <string name="additional_clinics">Additional clinics</string>
    <string name="additional_info">Additional Info</string>
    <string name="address">Address</string>
    <string name="address_colon">Address:</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_link">Address Link</string>
    <string name="admission_discharge_report">+ Admission Discharge Report</string>
    <string name="admission_status">Admission Status :</string>
    <string name="admission_summary_report">+ Admission Summary Report</string>
    <string name="admit_patient">Admit Patient</string>
    <string name="after">after</string>
    <string name="age">Age</string>
    <string name="age_colon">Age:</string>
    <string name="agree">I Agree</string>
    <string name="agree_terms_and_policy">Please agree to the Clinicia Terms of Service.</string>
    <string name="all_clinics">All Clinics</string>
    <string name="all_patients">All Patients</string>
    <string name="already"><u>Already Register? Login here</u></string>
    <string name="amount">Amount</string>
    <string name="amount_colon">Amount:</string>
    <string name="amount_paid">Amount Paid:</string>
    <string name="and">and</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anniversary_date">Anniversary Date</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="app_name">Clinicia</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicable_to_all_clinics">Display/Set price to all clinics</string>
    <string name="appointment_colon">Appointment:</string>
    <string name="appointment_sms_communication">+ Appointment SMS Communication</string>
    <string name="appointment_type">Appointment Type :</string>
    <string name="appointments">Appointments</string>
    <string name="appointments_count">"Appointments 
 0"</string>
    <string name="approved_by_colon">Approved By:</string>
    <string name="appt">+ Appt.</string>
    <string name="appvirality_btn_reload">Reload</string>
    <string name="appvirality_launch_msg">Refer your friend and earn $5.</string>
    <string name="appvirality_launch_refer">Refer</string>
    <string name="appvirality_launch_remind_later">Remind Later</string>
    <string name="appvirality_no_network_message">Sorry.! Network unavailable, please check your internet connection and try again</string>
    <string name="are_you_sure">"Your all clinics and package purchases will be deleted.

Are you sure you want to delete your account?"</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="assign_color_colon">Assign color:</string>
    <string name="at_admission">At Admission :</string>
    <string name="at_discharge">At Discharge:</string>
    <string name="attachments_colon">Documents:</string>
    <string name="author">Author / publisher</string>
    <string name="auto_generate_patient_no">Auto generate patient no.</string>
    <string name="available">Available :</string>
    <string name="available_qty">Available Qty</string>
    <string name="balance_amount">Balance Amount :</string>
    <string name="bank_account_name">Bank Account Name:</string>
    <string name="bank_account_no">Bank Account No.</string>
    <string name="bank_details">Bank Details :</string>
    <string name="bank_ifsc_code">Bank IFSC Code</string>
    <string name="bank_name">Bank Name</string>
    <string name="base_price">Base Price</string>
    <string name="benefits">Benefits :</string>
    <string name="bill_colon">Bill:</string>
    <string name="bill_no_sample">Bill No. (example):</string>
    <string name="bill_prefix">Bill No. Prefix</string>
    <string name="bill_remarks">Bill Remarks</string>
    <string name="billed_monthly">Billed Monthly</string>
    <string name="billed_yearly">Billed Yearly</string>
    <string name="billing">Billing</string>
    <string name="billing_colon">Billing :</string>
    <string name="birthday_report">+ Birthday Report</string>
    <string name="book_master">Books</string>
    <string name="book_name">Book Name</string>
    <string name="bookcode">Book Code</string>
    <string name="business_registration_no">Business Registration No.</string>
    <string name="campaign_type">Campaign Type:</string>
    <string name="cancel">Cancel</string>
    <string name="city">City</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="email">Email</string>
    <string name="email_header">Header:*</string>
    <string name="email_id">Email ID</string>
    <string name="email_sub_header">Sub Header:*</string>
    <string name="email_subject">Email Subject:*</string>
    <string name="for_first_3_months">for first 3 months</string>
    <string name="for_first_year">for first year</string>
    <string name="from_2nd_year_onwards">from 2nd year onwards.</string>
    <string name="from_4th_month_onwards">from 4th month onwards.</string>
    <string name="image">Select Image:</string>
    <string name="important"><u>Important!</u></string>
    <string name="include_quot_dear_patient_name_quot_in_the_message">Include \"Dear [Patient Name], \" in the message</string>
    <string name="incoming_call_permission">Permission for Incoming Caller ID</string>
    <string name="incoming_call_permission_description">"Clinicia requires permission to access Phone’s Call log &amp; Phone state for showing the details of the Patient whenever Patient calls the Doctors from their registered Mobile no.

Clinicia will show Patient Name, Outstanding Amount &amp; Last Visit Date for incoming calls from Patients."</string>
    <string name="lab_name">Lab Name</string>
    <string name="location">Location</string>
    <string name="message">Message</string>
    <string name="month">/ Month</string>
    <string name="ok">OK</string>
    <string name="phone_no1">Phone No1</string>
    <string name="phone_no2">Phone No2</string>
    <string name="pin_code">Pin code</string>
    <string name="previous_campaigns">Previous Campaigns</string>
    <string name="regards_clinic_name_clinic_phone_no">"Regards, 
Clinic Name, Clinic Phone No."</string>
    <string name="regards_n_doctor_name_clinic_phone_no">"Regards, 
Doctor Name, Clinic Phone No."</string>
    <string name="select_signature">Select Signature:</string>
    <string name="selected_groups">Selected Groups</string>
    <string name="selected_patients">Selected Patients</string>
    <string name="send_sms_to">Send to:</string>
    <string name="sms">SMS</string>
    <string name="sms_campaign_is_disabled_for_trial_user">SMS Campaign is disabled for trial user</string>
    <string name="state">State</string>
    <string name="submit">Submit</string>
    <string name="subscribe">Subscribe</string>
    <string name="tax_registration_no">Tax Registration No.</string>
    <string name="year">/ Year</string>
</resources>