<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/border" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="@dimen/font_18sp" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/green" android:padding="@dimen/margin_5dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/incoming_call_permission" />
    <TextView android:textSize="15.0sp" android:textColor="@color/black" android:paddingRight="@dimen/margin_10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_10dp" android:layout_marginTop="15.0dip" android:layout_marginBottom="@dimen/margin_15dp" android:text="@string/incoming_call_permission_description" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_15dp">
        <Button android:textColor="@color/white" android:layout_gravity="center" android:id="@id/btn_cancel" android:background="@drawable/red_patch" android:layout_width="wrap_content" android:layout_height="@dimen/margin_30dp" android:layout_marginRight="@dimen/margin_10dp" android:text="@string/cancel" android:textAllCaps="false" />
        <Button android:textColor="@color/white" android:layout_gravity="center" android:id="@id/btn_ok" android:background="@drawable/red_patch" android:layout_width="wrap_content" android:layout_height="@dimen/margin_30dp" android:layout_marginLeft="@dimen/margin_10dp" android:text="@string/ok" android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>